--- a/Subsetting.Rmd
+++ b/Subsetting.Rmd
@@ -239,9 +239,9 @@ df[df$x == 2, ]
 df[c(1, 3), ]
 
 # There are two ways to select columns from a data frame
-# Like a list
+# Like subsetting a list
 df[c("x", "z")]
-# Like a matrix
+# Like subsetting a matrix
 df[, c("x", "z")]
 
 # There's an important difference if you select a single 
